tests/negative/scope/type-defined-twice-same-package/test.smol
package testing;

class Test {
	fn main() Unit {
	}
}
